crates/compiler/backend/tests/snapshots/bytecode__bytecode@derive-new.reds.snap
---
source: crates/compiler/backend/tests/bytecode.rs
expression: "BytecodePrinter::new(&bundle, bundle_len)"
input_file: crates/compiler/backend/tests/data/derive-new.reds
---
// Pair::New;StringInt32 (f0)
assign
local 0
object.new 0
assign
ctx 18
local 0
object.field 0
param 0
assign
ctx 18
local 0
object.field 1
param 1
return
local 0

// Test; (f1)
assign
local 1
invoke.static j22 l15 f0 0000000000000000
string.const 0
i32.one
param.end
assign
local 2
invoke.static j26 l16 f2 0000000000000000
string.const 1
i32.const 2
param.end

// GenericPair<String,Int32>::New;StringInt32 (f2)
assign
local 3
object.new 1
assign
ctx 18
local 3
object.field 2
param 2
assign
ctx 18
local 3
object.field 3
param 3
return
local 3
