crates/compiler/backend/tests/snapshots/bytecode__bytecode@dyn-cast.reds.snap
---
source: crates/compiler/backend/tests/bytecode.rs
expression: "BytecodePrinter::new(&bundle, bundle_len)"
input_file: crates/compiler/backend/tests/data/dyn-cast.reds
snapshot_kind: text
---
// Test; (f0)
assign
local 0
object.new 0
ref.dyncast 0
local 0
assign
local 1
ref.to_wref
local 0
wref.dyncast 0
local 1
