crates/compiler/backend/tests/snapshots/bytecode__bytecode@enum-equals.reds.snap
---
source: crates/compiler/backend/tests/bytecode.rs
expression: "BytecodePrinter::new(&bundle, bundle_len)"
input_file: crates/compiler/backend/tests/data/enum-equals.reds
---
// Test; (f0)
assign
local 0
eq 0
enum.const 0 0
enum.const 0 1
assign
local 1
neq 0
enum.const 0 0
enum.const 0 1
