crates/compiler/backend/tests/snapshots/bytecode__bytecode@generic-struct.reds.snap
---
source: crates/compiler/backend/tests/bytecode.rs
expression: "BytecodePrinter::new(&bundle, bundle_len)"
input_file: crates/compiler/backend/tests/data/generic-struct.reds
snapshot_kind: text
---
// Test; (0)
assign
local 0
struct.new 2 0
i32.one
string.const 0
assign
local 1
struct.new 2 1
string.const 1
i32.const 2
assign
local 0
invoke.static j25 l0 f1 0000000000000000
local 1
param.end

// Tuple<String,Int32>::Swap;Tuple<String,Int32> (1)
return
struct.new 2 0
struct.field 0
param 0
struct.field 1
param 0
