crates/compiler/backend/tests/snapshots/bytecode__bytecode@lambda.reds.snap
---
source: crates/compiler/backend/tests/bytecode.rs
expression: "BytecodePrinter::new(&bundle, bundle_len)"
input_file: crates/compiler/backend/tests/data/lambda.reds
---
// Test; (f0)
assign
local 0
i32.one
assign
local 1
invoke.static j25 l0 f1 0000000000000000
local 0
param.end

// Function1<Int32,Int32>::Call;Int32 (f2)

// Function1<Int32,Function1<Int32,Int32>>::Call;Int32 (f3)

// lambda$13::Instantiate (f1)
assign
local 2
object.new 0
assign
ctx 15
local 2
object.field 0
param 0
return
local 2

// lambda$13::Call;Int32 (f4)
return
invoke.static j34 l0 f5 0000000000000000
object.field 0
param 1
param.end

// lambda$18::Instantiate (f5)
assign
local 3
object.new 1
assign
ctx 15
local 3
object.field 1
param 2
assign
ctx 15
local 3
object.field 2
param 3
return
local 3

// lambda$18::Call;Int32 (f6)
return
invoke.static j59 l4 f7 0000000000000000
invoke.static j34 l4 f7 0000000000000000
object.field 1
object.field 2
param.end
param 4
param.end

// OperatorAdd;Int32Int32 (f7)
